err/rxnconcompiler.err
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rxnconcompiler'...
Listing './lib/python3.5/site-packages/rxnconcompiler/biological_complex'...
Compiling './lib/python3.5/site-packages/rxnconcompiler/biological_complex/biological_complex.py'...
***   File "./lib/python3.5/site-packages/rxnconcompiler/biological_complex/biological_complex.py", line 51
    print '### %s' % self
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rxnconcompiler/bngl'...
Listing './lib/python3.5/site-packages/rxnconcompiler/contingency'...
Listing './lib/python3.5/site-packages/rxnconcompiler/definitions'...
Listing './lib/python3.5/site-packages/rxnconcompiler/molecule'...
Compiling './lib/python3.5/site-packages/rxnconcompiler/molecule/molecule.py'...
***   File "./lib/python3.5/site-packages/rxnconcompiler/molecule/molecule.py", line 171
    print "### MOLECULE: %s (%s, %s)" % (self.name, self._id, self.mid)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rxnconcompiler/parser'...
Compiling './lib/python3.5/site-packages/rxnconcompiler/parser/rxncon_parser.py'...
***   File "./lib/python3.5/site-packages/rxnconcompiler/parser/rxncon_parser.py", line 242
    raise NameError, "%s is not a valid filename" % filename
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rxnconcompiler/reaction'...
Compiling './lib/python3.5/site-packages/rxnconcompiler/reaction/reaction.py'...
***   File "./lib/python3.5/site-packages/rxnconcompiler/reaction/reaction.py", line 60
    print "### REACTION: %s, %s" % (self.name, self.rid)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rxnconcompiler/util'...
Listing './lib/python3.5/site-packages/rxnconcompiler-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
